Update 3de jaar

--- a/css/style.css
+++ b/css/style.css
@@ -1075,7 +1075,7 @@ a:hover {
 
 footer {
   text-align: center;
-  color: #fff;
+  color: #0078ff;
   padding-bottom: 4rem;
 }
 
@@ -1088,7 +1088,7 @@ footer .credits {
 }
 
 footer .credits a {
-  color: #fff;
+  color: #0078ff;
 }
 
 /*======================================
